october-2024/14.10.2024/sukot-assigment/styles/movie-data.css
.rating-container,
.single-img-container,
.single-movie-card,
.container-title-movie-data,
.img-name-container,
.single-movie-img {
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.img-name-container {
  width: 200px;
  overflow: hidden;
}

.fav-button-movie-single-page {
  border: none;
  background: var(--lighter-red-color);
  border-radius: 0.3em;
  padding: 0.5em;
  font-size: 1.5em;
  font-family: "Bebas Neue";
  color: white;
  cursor: pointer;
}

.hover-element {
  display: none;
}

.movie-img {
  width: 15em;
}

.white-data-btn {
  transform: translate(0em, -6em);
}

.white-share-trailer-btn {
  transform: translate(-5em, -6em);
}

.white-heart-trailer-btn {
  transform: translate(5em, -6em);
}

.play-button-btn {
  transform: translate(0, -14.5em);
}

.similar-movies-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  flex-wrap: wrap;
  gap: 2em;
}

.similar-movies-title {
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--lighter-red-color);
  text-align: center;
  box-shadow: 0em 0em 2.5em -1em;
  font-size: 4em;
  padding: 0.4em;
  border-radius: 0.2em;
  margin-top: 1em;
}

.similar-movies-container .rating-img {
  height: 2em;
}

.fav-button-movie-single-page:hover {
  background-color: white;
  color: black;
}

.navbar-mobile {
  position: unset;
}

.cast-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  flex-wrap: wrap;
  gap: 1.5em;
  position: relative;
  overflow: hidden;
  margin-top: 3em;
}

.actor-star {
  font-size: 3em;
}

.movie-release,
.movie-genre {
  background: black;
  color: white;
  padding: 0.5em;
  border-radius: 0.2em;
}

.movie-link {
  background: none;
  border: none;
}

.website-link {
  font-family: "Bebas Neue";
}

.movie-link a {
  background: black;
  font-size: 2em;
  padding: 0.5em;
  font-weight: bold;
  display: block;
  border-radius: 0.2em;
}

.movie-link a:hover,
.button-trailer a:hover {
  background: var(--lighter-red-color);
  color: white;
}

.movie-details {
  background: black;
  color: white;
  padding: 1em;
  line-height: 1.4em;
  font-weight: 900;
  font-size: 1.8em;
}

.rating-container {
  flex-direction: column-reverse;
}

.rating-number-txt {
  font-size: 2.5em;
}

.rating-img {
  height: 3em;
}

.single-movie-img,
.actor-img {
  width: 10em;
  border-radius: 0.5em;
}

.actor-name,
.actor-role-name {
  color: white;
  background: black;
  padding: 0.5em;
  border-radius: 0.2em;
  font-size: 1.4em;
}

.title-single-movie {
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--lighter-red-color);
  text-align: center;
  box-shadow: 0em 0em 2.5em -1em;
  font-size: 4em;
  padding: 0.4em;
  border-radius: 0.2em;
  margin-top: 1em;
}

.button-trailer {
  border: none;
  background: none;
  border-radius: 0.1em;
}

.link-trailer {
  text-decoration: none;
  color: white;
  width: auto;
  background: black;
  font-size: 2em;
  padding: 0.5em;
  font-weight: bold;
  display: block;
  border-radius: 0.2em;
  font-family: "Bebas Neue";
}

.watch-trailer-movie {
  background: black;
  font-size: 2em;
  padding: 0.5em;
  font-weight: bold;
  border-radius: 0.1em;
  display: block;
}

.summary-title {
  color: white;
  background: black;
  border-radius: 0.2em;
  padding: 0.4em;
  font-style: italic;
  letter-spacing: 0.2em;
}

.play-button-btn-single-movie {
  transform: translateY(-18em);
  box-shadow: 0em 0em 3em 0.01em var(--rating--color);
  border-radius: 3em;
}

.single-movie-img {
  width: 15em;
  box-shadow: 0 0 0.1em 0.1em white;
  animation: glow 3s ease-in-out infinite;
}

.actors-title {
  background: black;
  padding: 0.5em;
  text-align: center;
  font-size: 1.5em;
  box-shadow: 0em 0em 1em 0.05em var(--rating--color);
  color: white;
  border-radius: 0.2em;
}

.movie-name {
  color: var(--rating--color);
}

body > footer {
  position: relative;
  bottom: 0;
}

@keyframes glow {
  0% {
    box-shadow: 0em 0em 2em 0.01em var(--lighter-red-color);
  }
  50% {
    box-shadow: 0em 0em 3em 0.5em var(--lighter-red-color);
  }
  100% {
    box-shadow: 0em 0em 2em 0.01em var(--lighter-red-color);
  }
}

@media screen and (min-width: 1024px) {
  .white-data-btn {
    transform: translate(0em, -9em);
  }

  .white-share-trailer-btn {
    transform: translate(-5em, -9em);
  }

  .white-heart-trailer-btn {
    transform: translate(5em, -9em);
  }

  .play-button-btn {
    transform: translate(0, -16.5em);
  }

  .single-movie-img {
    width: 15em;
  }

  .actor-img {
    width: 10em;
  }

  .actor-name {
    font-size: 1em;
  }

  .movie-link a {
    width: auto;
    display: flex;
  }

  .actors-title {
    width: auto;
    font-size: 1.8em;
    border-radius: 0.2em;
  }
}

